Alignment Fixed for Supporting you in your Home

--- a/Supporting you in your Home.css
+++ b/Supporting you in your Home.css
@@ -249,6 +249,7 @@ body {
     height: fit-content;
 }
 
+
 .assume {
     padding: 60px;
     text-align: center;
@@ -348,6 +349,116 @@ blockquote {
 
 .video-section {
     margin: 20px 0;
+}
+.services-section {
+    width: 75%;
+    margin: 5px auto;
+    padding: 40px 0;
+}
+
+.services-section h1 {
+    color: #008000; 
+    font-size: 36px;    
+}
+
+.breadcrumb {
+    list-style: none;
+    padding: 0;
+    margin: 0 0 20px 0;
+    font-size: 14px;
+}
+
+.breadcrumb li {
+    display: inline;
+    margin-right: 5px;
+}
+
+.breadcrumb li::after {
+    content: ">";
+    margin-left: 5px;
+}
+
+.breadcrumb li:last-child::after {
+    content: "";
+}
+
+.breadcrumb a {
+    color: #333;
+    text-decoration: none;
+}
+
+.breadcrumb a:hover {
+    padding: 5px 5px;
+    background-color: #00773e;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 10px; 
+}
+.service-item {
+    display: flex;
+    align-items: right;
+    margin-top: 20px;
+    margin-bottom: 4px;    
+    padding: 20px;
+    border-radius: 8px;
+    
+    
+}
+
+.service-item img {
+    width: 460px;
+    height: auto;
+    border-radius: 10px;
+    margin-right: 60px;
+}
+
+.service-content {
+    max-width: 600px;
+}
+
+.service-content h2 {
+    color: #008000; 
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.service-content p {
+    color: #555;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+}
+
+.service-content a {
+    font-weight: bold;
+    color: #008000;
+    font-size: 16px;
+}
+
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination a {
+    color: #008000; 
+    padding: 8px 16px;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    margin: 0 4px;
+    border-radius: 5px;
+}
+
+.pagination a.active {
+    background-color: #008000;
+    color: white;
+    border: 1px solid #008000;
+}
+
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
 }
 form {    
     display: flex;
